screenshot.png and theme information added

--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+/*
+Theme Name: Metawin Theme
+Theme URI: http://metawin.local
+Author: Metin Ozgenc Mardi
+Author URI: https://www.ozgencmardi.com
+Version: 1.0
+*/
+
+/* Additional CSS styles and code for your theme */
+
 body {
     font-family: 'Poppins', sans-serif;
 }  
