--- a/style.css
+++ b/style.css
@@ -26,41 +26,10 @@ html {
   
 .mb-20 {
     margin-bottom: 20px !important;
-}
+} 
 
-.top-menu {
-    background-color: #000;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 10%;
-}
-  
-.nav-menu {
-    margin: 38px 0 0 0;
-}
-  
-.nav-menu ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-}
-  
-.nav-menu li {
-    margin-right: 20px;
-}
-  
-.nav-menu a {
-    color: #F3F4F6;
-    font-size: 16px;
-    font-weight: 400;
-    text-decoration: none;
-}
-  
-.nav-menu a:hover {
-    color: #F3F4F6;
-    text-decoration: underline;
+.nav-logo {
+    width: 120px;
 }
 
 .content-area {
@@ -717,18 +686,17 @@ html {
 
 @media (max-width: 768px) {
 
+    .nav-logo {
+        width: 90px;
+    }
+
     .hero-section {
         background-repeat: no-repeat;
         background-position: -500px -50px;
         background-size: cover;
         width: 100%;
         height: 700px;
-        text-align: center;
         position: relative;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
     }
     
     .image-overlay {
@@ -958,6 +926,7 @@ html {
     .choose-us-content img {
         float: none;
         margin-bottom: 38px;
+        padding: 0 20px;
     }
     
     .choose-us-paragraph {
@@ -973,4 +942,107 @@ html {
         font-size: 16px;
         margin: 10px 0 0 0 !important;
     }
+
+    .footer-section {
+        padding: 15px 0;
+    }
+    
+    .footer-container {
+        max-width: 90%;
+        margin: 0 auto;
+        text-align: center;
+    }
+    
+    .footer-logo img {
+        width: 80px;
+        height: 80px;
+    }
+    
+    .footer-menu {
+        margin: 30px 0 0 0;
+    }
+    
+    .footer-menu ul {
+        flex-direction: column;
+    }
+    
+    .footer-menu li {
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+    
+    .footer-line {
+        margin: 30px 0;
+    }
+    
+    .footer-images {
+        margin-bottom: 30px;
+    }
+    
+    .footer-images img {
+        margin: 0 5px;
+        height: 15px;
+    }
+    
+    .footer-text {
+        font-size: 14px;
+    }
 }
+
+
+/* Mobile Menu */
+
+.container {
+    width: 1640px !important;
+}
+
+.navbar {
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.8) 50%, rgba(0, 0, 0, 0.6) 100%), url('assets/images/header-bg.webp');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+}
+.custom-menu{width: 100%; height: 100%; opacity: 0; visibility: hidden;}
+.nav-open .custom-menu {opacity: 1; visibility: visible; background: rgba(0, 0, 0, 0.9); }
+.custom-menu .nav li a{color:#FFF; font-size: 5vh; font-weight:600; }
+.custom-menu .nav li{
+    opacity: 0;
+    -webkit-transform: translateY(-40px);
+    transform: translateY(-40px);
+    -webkit-animation-timing-function: cubic-bezier(.45,.005,0,1);
+    -moz-animation-timing-function: cubic-bezier(.45,.005,0,1);
+    -o-animation-timing-function: cubic-bezier(.45,.005,0,1);
+    animation-timing-function: cubic-bezier(.45,.005,0,1);
+}
+.nav-open .custom-menu .nav li{
+    opacity: 1;
+    -webkit-transform: translateY(0px);
+    transform: translateY(0px);
+    -webkit-transition: -webkit-transform .2s,opacity .2s;
+    transition: transform .2s,opacity .2s;
+    text-align: center;
+    margin-bottom: 20px;
+    padding-right: 20px;
+}
+.custom-menu .nav li.delay-1{-webkit-transition-delay:0.1s; -moz-transition-delay:0.1s; -ms-transition-delay:0.1s; -o-transition-delay:0.1s; transition-delay:0.1s; }
+.custom-menu .nav li.delay-2{-webkit-transition-delay:0.2s; -moz-transition-delay:0.2s; -ms-transition-delay:0.2s; -o-transition-delay:0.2s; transition-delay:0.2s; }
+.custom-menu .nav li.delay-3{-webkit-transition-delay:0.3s; -moz-transition-delay:0.3s; -ms-transition-delay:0.3s; -o-transition-delay:0.3s; transition-delay:0.3s; }
+.custom-menu .nav li.delay-4{-webkit-transition-delay:0.4s; -moz-transition-delay:0.4s; -ms-transition-delay:0.4s; -o-transition-delay:0.4s; transition-delay:0.4s; }
+.custom-menu .nav li.delay-5{-webkit-transition-delay:0.5s; -moz-transition-delay:0.5s; -ms-transition-delay:0.5s; -o-transition-delay:0.5s; transition-delay:0.5s; }
+.custom-menu .nav li.delay-6{-webkit-transition-delay:0.6s; -moz-transition-delay:0.6s; -ms-transition-delay:0.6s; -o-transition-delay:0.6s; transition-delay:0.6s; }
+.custom-menu .nav li.delay-7{-webkit-transition-delay:0.7s; -moz-transition-delay:0.7s; -ms-transition-delay:0.7s; -o-transition-delay:0.7s; transition-delay:0.7s; }
+.custom-menu .nav li.delay-8{-webkit-transition-delay:0.8s; -moz-transition-delay:0.8s; -ms-transition-delay:0.8s; -o-transition-delay:0.8s; transition-delay:0.8s; }
+.custom-menu .nav li.delay-9{-webkit-transition-delay:0.9s; -moz-transition-delay:0.9s; -ms-transition-delay:0.9s; -o-transition-delay:0.9s; transition-delay:0.9s; }
+
+.nav-button{position:relative; z-index:1111; height:50px; display:block; width:50px; padding:15px; }
+.nav-button #nav-icon3{width:36px;height:36px;display:inline-block;position:relative;-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-o-transform:rotate(0deg);transform:rotate(0deg);-webkit-transition:.5s ease-in-out;-moz-transition:.5s ease-in-out;-o-transition:.5s ease-in-out;transition:.5s ease-in-out;cursor:pointer;}
+.nav-button #nav-icon3 span{display:block;position:absolute;height:3px;width:100%;background:#FFFFFF;border-radius:9px;opacity:1;left:0;-webkit-transform:rotate(0deg);-moz-transform:rotate(0deg);-o-transform:rotate(0deg);transform:rotate(0deg);-webkit-transition:.25s ease-in-out;-moz-transition:.25s ease-in-out;-o-transition:.25s ease-in-out;transition:.25s ease-in-out}
+.nav-button #nav-icon3 span:nth-child(1){top:0}
+.nav-button #nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3){top:12px}
+.nav-button #nav-icon3 span:nth-child(4){top:24px}
+.nav-open #nav-icon3 span:nth-child(1){top:9px;width:0;left:50%}
+.nav-open #nav-icon3 span:nth-child(2){-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);transform:rotate(45deg)}
+.nav-open #nav-icon3 span:nth-child(3){-webkit-transform:rotate(-45deg);-moz-transform:rotate(-45deg);-o-transform:rotate(-45deg);transform:rotate(-45deg)}
+.nav-open #nav-icon3 span:nth-child(4){top:9px;width:0;left:50%}
+
+.flex-center{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;height:100%}
